# rust-todos-grpc-example

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
docs/: index.md
migrations/: 20250130221818_initial.sql
src/lib/: api_docs.rs  common.rs  database.rs  mod.rs  proto.rs  server.rs  services.rs  update_mask_handler.rs
src/lib/services/: todos.rs
src/lib/services/todos/: common.rs  create.rs  delete.rs  get.rs  list.rs  update.rs
src/protocols/v1/: todos.proto
tests/: todos.rs
tests/common/: mod.rs
