[package]
name = "rust-todos-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
test = false

[lib]
name = "todos_service"
path = "src/lib/mod.rs"


[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
pg_escape = "0.1.1"
prost = "0.13.3"
prost-types = "0.13.4"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "json", "uuid", "time", "tls-native-tls"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
uuid = { version = "1.12.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
tempfile = "3.16.0"
tokio-stream = { version = "0.1.17", features = ["net"] }
tower = "0.5.2"
hyper-util = "0.1.10"
