[package]
name = "rust-todos-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
test = false

[[bin]]
name = "cli"
test = false

[lib]
name = "todos_service"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.95"
async-compression = { version = "0.4.18" , features = ["tokio", "gzip"]}
async-tar = "0.5.0"
async-trait = "0.1.85"
clap = { version = "4.5.30", features = ["derive"] }
ctrlc = "3.4.5"
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures = "0.3.31"
glob = "0.3.2"
log = "0.4.25"
pg_escape = "0.1.1"
prost = "0.13.3"
prost-types = "0.13.4"
reqwest = { version = "0.12.12", features = ["stream"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "json", "uuid", "time", "tls-native-tls"] }
tempfile = "3.16.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
uuid = { version = "1.12.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
tower = "0.5.2"
hyper-util = "0.1.10"
